--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,12 +1,81 @@
 .wrapper {
-     width: 100%;
-     height: var(--default-layout-header-height, 60px);
-     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
-     display: flex;
-     justify-content: center;
+    width: 100%;
+    height: var(--default-layout-header-height, 60px);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
+    display: flex;
+    justify-content: center;
 }
 
 .inner {
-     height: 100%;
-     width: var(--default-layout-width);
+    height: 100%;
+    width: var(--default-layout-width);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search {
+    position: relative;
+    display: flex;
+    height: 46px;
+    width: 360px;
+    padding-left: 16px;
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: 92px;
+    overflow: hidden;
+    border: 1.5px solid transparent;
+
+    &::after {
+        content: '';
+        width: 1px;
+        height: 28px;
+        background: rgba(22, 24, 35, 0.12);
+        position: absolute;
+        top: 9px;
+        right: 52px;
+    }
+
+    &:focus-within {
+        border-color: rgba(22, 24, 35, 0.2);
+    }
+}
+
+.search-input {
+    height: 100%;
+    flex: 1;
+    color: var(--black);
+    background: transparent;
+    font-weight: 400;
+    font-size: 1.6rem;
+    caret-color: var(--primary);
+
+    &:not(:placeholder-shown) ~ .search-btn {
+        color: #4c4e57;
+    }
+}
+
+.clear,
+.loading {
+    position: absolute;
+    right: 68px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 1.6rem;
+    color: rgba(22, 24, 35, 0.34);
+}
+
+.search-btn {
+    width: 52px;
+    height: 100%;
+    font-size: 2rem;
+    color: rgba(22, 24, 35, 0.34);
+
+    &:hover {
+        cursor: pointer;
+        background-color: rgba(22, 24, 35, 0.03);
+    }
+
+    &:active {
+        background-color: rgba(22, 24, 35, 0.06);
+    }
 }
