--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -1,16 +1,16 @@
 .wrapper {
-     display: flex;
-     flex-direction: column;
-     align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container {
-     width: var(--default-layout-width);
-     display: flex;
-     min-height: 1000px;
+    width: var(--default-layout-width);
+    display: flex;
+    min-height: 1000px;
 }
 
 .content {
-     flex: 1;
-     background-color: red;
+    flex: 1;
+    // background-color: red;
 }
