--- a/src/components/Layout/DefaultLayout/Sidebar/Sidebar.module.scss
+++ b/src/components/Layout/DefaultLayout/Sidebar/Sidebar.module.scss
@@ -1,8 +1,8 @@
 .wrapper {
-     width: 348px;
+    width: 348px;
 }
 
 .content {
-     min-height: 1000px;
-     background-color: #333;
+    min-height: 1000px;
+    // background-color: #333;
 }
