--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -14,11 +14,15 @@
     justify-content: space-between;
 }
 
+.search,
+.search-result {
+    width: 361px;
+}
+
 .search {
     position: relative;
     display: flex;
     height: 46px;
-    width: 360px;
     padding-left: 16px;
     background-color: rgba(22, 24, 35, 0.06);
     border-radius: 92px;
@@ -52,6 +56,15 @@
     &:not(:placeholder-shown) ~ .search-btn {
         color: #4c4e57;
     }
+}
+
+.search-account {
+    height: 30px;
+    padding: 0 12px 5px;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
 }
 
 .clear,
