Xây dựng UI phần Header #4

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -81,7 +81,9 @@
 
 // Icon
 .icon {
+    display: inline-block;
     height: 20px;
     width: 20px;
     margin-right: 8px;
+    text-align: center;
 }
