--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -12,6 +12,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0px 24px;
+}
+
+.logo {
+    min-width: 300px;
 }
 
 .search,
@@ -91,4 +96,21 @@
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
     }
+}
+
+.action {
+    display: flex;
+    align-items: center;
+}
+
+.action-logo {
+    margin-left: 16px;
+    padding: 0 4px;
+}
+
+.more-btn {
+    font-size: 2rem;
+    margin-left: 20px;
+    padding: 4px 8px;
+    background: transparent;
 }
